<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_campus_map"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_campus_map"/>

    <item
        android:id="@+id/action_events"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:title="@string/action_events"/>
    
    <item
        android:id="@+id/action_sports"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:title="@string/action_sports"/>
    
    <item
        android:id="@+id/action_staff"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/action_staff"/>
    
    <item
        android:id="@+id/action_course"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/action_course"/>
    
    <item
        android:id="@+id/action_plus"
        android:orderInCategory="6"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/action_plus"/>
    
    <item
        android:id="@+id/action_campus_links"
        android:orderInCategory="7"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/action_campus_links"/>
    
</menu>
